@@ -1,3 +1,7 @@
+2008-03-23  Sergey Udaltsov <svu@gnome.org>
+
+	* gswitchit-applet.c: updating from deprecated function (bug #523704)
+
 2008-03-16  Callum McKenzie  <callum@spooky-possum.org>
 
 	* gswitchit.ui
